Use latest of everything

--- a/appconfig.ini
+++ b/appconfig.ini
@@ -59,3 +59,7 @@ unpaid_time_limit_mins = 2880
 ;If you want to get data from the Encyclopedia of Life, you need to put your own API key here. 
 ;Fill it in using instructions at http://eol.org/info/api_overview 
 ;eol_api_key = 11111111111
+
+[analytics]
+; * google_analytics: if you want to use Google Analytics, put your
+;    Google Analytics ID here, e.g. UA-12345678-1
